deploy/minikube/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: chaosbox
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
