deploy/minikube/store-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store
  labels:
    app.kubernetes.io/name: store
spec:
  selector:
    app.kubernetes.io/name: store
    app.kubernetes.io/part-of: chaosbox
  ports:
    - name: http
      port: 8080
      targetPort: http
