deploy/minikube/store-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: store
                port:
                  name: http
